--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "homepage": "https://basecode.sh"
     }],
     "require": {
-        "php": "^7.2",
+        "php": ">=7.2",
         "illuminate/support": "^5.8|^6.0|^7.0|^8.0|^9.0|^10.0",
         "illuminate/database": "^5.8|^6.0|^7.0|^8.0|^9.0|^10.0"
     },
